# OCP-tests

./: .gitignore  MapleWorksheet-Template-New.mw  MapleWorksheet-Template-PINS.mw  README.md  Rakefile  TEST_CHE_NON_VANNO.txt  stytle-set.mw  stytle-set2.mw  test_all.rb
collected_results/: 000_iterations.txt  (+442 more)
test-ICLOCS_Catalyst/generated_code/: CMakeLists.txt  Catalyst_pins_run.rb  Catalyst_ruby_run.rb  ICLOCS_Catalyst_pins_run.rb  ICLOCS_Catalyst_ruby_run.rb
test-ICLOCS_Catalyst/generated_code/data/: Catalyst_Data.lua  Catalyst_Data.rb  ICLOCS_Catalyst_Data.lua  ICLOCS_Catalyst_Data.rb  ICLOCS_Catalyst_gnuplot.txt
test-ICLOCS_Catalyst/generated_code/ocp-src/: Catalyst.cc  Catalyst.hh  Catalyst_Methods_AdjointODE.cc  Catalyst_Methods_Guess.cc  Catalyst_Methods_ODE.cc  Catalyst_Methods_UserFunctions.cc  Catalyst_Methods_boundary_conditions.cc  Catalyst_Methods_controls.cc  Catalyst_Methods_problem.cc  Catalyst_Pars.hh  Catalyst_dll_pins.cc  Catalyst_dll_pins.hh  Catalyst_dll_ruby.cc  Catalyst_dll_ruby.hh  ICLOCS_Catalyst.cc  ICLOCS_Catalyst.hh  ICLOCS_Catalyst_Methods_AdjointODE.cc  ICLOCS_Catalyst_Methods_AdjointODE_HxHuHp.cc  ICLOCS_Catalyst_Methods_AdjointODE_Hxup.cc  ICLOCS_Catalyst_Methods_AdjointODE_JuJpLT.cc  ICLOCS_Catalyst_Methods_AdjointODE_Jupu.cc  ICLOCS_Catalyst_Methods_Direct.cc  ICLOCS_Catalyst_Methods_Guess.cc  ICLOCS_Catalyst_Methods_Indirect.cc  ICLOCS_Catalyst_Methods_ODE.cc  ICLOCS_Catalyst_Methods_UserFunctions.cc  ICLOCS_Catalyst_Methods_boundary_conditions.cc  ICLOCS_Catalyst_Methods_controls.cc  ICLOCS_Catalyst_Methods_problem.cc  ICLOCS_Catalyst_Pars.hh  ICLOCS_Catalyst_dll_pins.cc  ICLOCS_Catalyst_dll_pins.hh  ICLOCS_Catalyst_dll_ruby.cc  ICLOCS_Catalyst_dll_ruby.hh
test-ICLOCS_SingularArc/generated_code/: CMakeLists.txt  ICLOCS_SingularArc_pins_run.rb  ICLOCS_SingularArc_ruby_run.rb
test-ICLOCS_SingularArc/generated_code/data/: ICLOCS_SingularArc_Data.lua  ICLOCS_SingularArc_Data.rb  ICLOCS_SingularArc_gnuplot.txt
test-ICLOCS_SingularArc/generated_code/ocp-src/: ICLOCS_SingularArc.cc  ICLOCS_SingularArc.hh  ICLOCS_SingularArc_Methods_AdjointODE.cc  ICLOCS_SingularArc_Methods_AdjointODE_HxHuHp.cc  ICLOCS_SingularArc_Methods_AdjointODE_Hxup.cc  ICLOCS_SingularArc_Methods_AdjointODE_JuJpLT.cc  ICLOCS_SingularArc_Methods_AdjointODE_Jupu.cc  ICLOCS_SingularArc_Methods_Direct.cc  ICLOCS_SingularArc_Methods_Guess.cc  ICLOCS_SingularArc_Methods_Indirect.cc  ICLOCS_SingularArc_Methods_ODE.cc  ICLOCS_SingularArc_Methods_UserFunctions.cc  ICLOCS_SingularArc_Methods_boundary_conditions.cc  ICLOCS_SingularArc_Methods_controls.cc  ICLOCS_SingularArc_Methods_problem.cc  ICLOCS_SingularArc_Pars.hh  ICLOCS_SingularArc_dll_pins.cc  ICLOCS_SingularArc_dll_pins.hh  ICLOCS_SingularArc_dll_ruby.cc  ICLOCS_SingularArc_dll_ruby.hh
test-LUUS_DrugDisplacement/generated_code/: CMakeLists.txt  LUUS_DrugDisplacement_pins_run.rb  LUUS_DrugDisplacement_ruby_run.rb
test-LUUS_DrugDisplacement/generated_code/data/: LUUS_DrugDisplacement_Data.lua  LUUS_DrugDisplacement_Data.rb  LUUS_DrugDisplacement_gnuplot.txt
test-LUUS_DrugDisplacement/generated_code/ocp-src/: LUUS_DrugDisplacement.cc  LUUS_DrugDisplacement.hh  LUUS_DrugDisplacement_Methods_AdjointODE.cc  LUUS_DrugDisplacement_Methods_AdjointODE_HxHuHp.cc  LUUS_DrugDisplacement_Methods_AdjointODE_Hxup.cc  LUUS_DrugDisplacement_Methods_AdjointODE_JuJpLT.cc  LUUS_DrugDisplacement_Methods_AdjointODE_Jupu.cc  LUUS_DrugDisplacement_Methods_Direct.cc  LUUS_DrugDisplacement_Methods_Guess.cc  LUUS_DrugDisplacement_Methods_Indirect.cc  LUUS_DrugDisplacement_Methods_ODE.cc  LUUS_DrugDisplacement_Methods_UserFunctions.cc  LUUS_DrugDisplacement_Methods_boundary_conditions.cc  LUUS_DrugDisplacement_Methods_controls.cc  LUUS_DrugDisplacement_Methods_problem.cc  LUUS_DrugDisplacement_Pars.hh  LUUS_DrugDisplacement_dll_pins.cc  LUUS_DrugDisplacement_dll_pins.hh  LUUS_DrugDisplacement_dll_ruby.cc  LUUS_DrugDisplacement_dll_ruby.hh
test-WorstCaseScenario/: CMakeLists.txt  WorstCaseScenario_pins_run.rb  WorstCaseScenario_ruby_run.rb  iterations.txt
test-WorstCaseScenario/data/: WorstCaseScenario_Data.lua  WorstCaseScenario_Data.rb
test-WorstCaseScenario/generated_code/: CMakeLists.txt  WorstCaseScenario_pins_run.rb  WorstCaseScenario_ruby_run.rb
test-WorstCaseScenario/generated_code/data/: WorstCaseScenario_Data.lua  WorstCaseScenario_Data.rb  WorstCaseScenario_gnuplot.txt
test-WorstCaseScenario/generated_code/ocp-src/: WorstCaseScenario.cc  WorstCaseScenario.hh  WorstCaseScenario_Methods_AdjointODE.cc  WorstCaseScenario_Methods_AdjointODE_HxHuHp.cc  WorstCaseScenario_Methods_AdjointODE_Hxup.cc  WorstCaseScenario_Methods_AdjointODE_JuJpLT.cc  WorstCaseScenario_Methods_AdjointODE_Jupu.cc  WorstCaseScenario_Methods_Direct.cc  WorstCaseScenario_Methods_Guess.cc  WorstCaseScenario_Methods_Indirect.cc  WorstCaseScenario_Methods_ODE.cc  WorstCaseScenario_Methods_UserFunctions.cc  WorstCaseScenario_Methods_boundary_conditions.cc  WorstCaseScenario_Methods_controls.cc  WorstCaseScenario_Methods_problem.cc  WorstCaseScenario_Pars.hh  WorstCaseScenario_dll_pins.cc  WorstCaseScenario_dll_pins.hh  WorstCaseScenario_dll_ruby.cc  WorstCaseScenario_dll_ruby.hh
test-WorstCaseScenario/model/: WorstCaseScenario.mpl  WorstCaseScenario.mw
test-WorstCaseScenario/ocp-interfaces/Matlab/: Compile.m  CompileMex.m  CompileOctave.m  WorstCaseScenario.m  WorstCaseScenario_Mex.cc  WorstCaseScenario_main.m  WorstCaseScenario_main_fsolve.m  WorstCaseScenario_main_ipopt.m  WorstCaseScenario_main_newton.m  mex_utils.hh
test-WorstCaseScenario/ocp-src/: WorstCaseScenario.cc  WorstCaseScenario.hh  WorstCaseScenario_Guess.cc  WorstCaseScenario_Methods_AdjointODE.cc  WorstCaseScenario_Methods_Guess.cc  WorstCaseScenario_Methods_ODE.cc  WorstCaseScenario_Methods_UserFunctions.cc  WorstCaseScenario_Methods_boundary_conditions.cc  WorstCaseScenario_Methods_controls.cc  WorstCaseScenario_Methods_problem.cc  WorstCaseScenario_Pars.hh  WorstCaseScenario_dll_pins.cc  WorstCaseScenario_dll_pins.hh  WorstCaseScenario_dll_ruby.cc  WorstCaseScenario_dll_ruby.hh
(+9023 files in other folders)
